# Hyacine

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  desktop.yml  scrub.yml
config/: defaults.yaml  rules.starter.yaml
desktop/: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
desktop/sidecar/: README.md  entry.py  hyacine-ipc.spec
desktop/src/: app.css  app.html
desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: README.md
desktop/src-tauri/src/: error.rs  lib.rs  main.rs  redact.rs  secrets.rs  sidecar.rs
desktop/src-tauri/src/commands/: mod.rs  probes.rs  secrets.rs  sidecar.rs  ui.rs
desktop/src/lib/: i18n.ts  ipc.ts  provider-presets.ts  stores.ts  validators.ts
desktop/src/lib/brand/: Aurora.svelte  HyacineLogo.svelte  Pansy.svelte  Sparkle.svelte
desktop/src/lib/components/: TimezoneCombobox.svelte
desktop/src/routes/: +layout.svelte  +page.svelte
desktop/src/routes/app/: +layout.svelte  +page.svelte
desktop/src/routes/wizard/: +layout.svelte
docs/: ONBOARDING.md  desktop-architecture.md  server-deploy.md  troubleshooting.md
examples/alice/: README.md
examples/alice/config/: config.yaml  rules.yaml
examples/alice/prompts/: hyacine.md
prompts/: briefing.md.template  hyacine.md.template
scripts/: bootstrap_auth.py  doctor.py  scrub_check.py  test_sendmail.py
src/hyacine/: __init__.py  __main__.py  config.py  db.py  i18n.py  models.py
src/hyacine/cli/: __init__.py  init.py
src/hyacine/graph/: __init__.py  auth.py  email_render.py  fetch.py  send.py
src/hyacine/ipc/: __init__.py  __main__.py  protocol.py  router.py  server.py
src/hyacine/ipc/handlers/: __init__.py  (+6 more)
src/hyacine/llm/: __init__.py  anthropic_http.py  claude_code.py  openai_chat.py  providers.py
src/hyacine/ops/: __init__.py  monitoring.py
src/hyacine/pipeline/: __init__.py  briefing.py  rules.py  run.py
src/hyacine/web/: __init__.py  app.py  utils.py
tests/: test_claude_code_wrapper.py  test_cli_init.py  test_config_handler.py  test_config_resolver.py  test_db.py  test_doctor.py  test_email_render.py  test_graph_auth.py  test_graph_fetch.py  test_graph_send.py  test_i18n.py  test_ipc_protocol.py  test_llm_dispatch.py  test_models.py  test_monitoring.py  test_pipeline_watermark.py  test_rules.py  test_scrub_check.py  test_web.py
(+31 files in other folders)
